--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -13,7 +13,8 @@
       rgba(100, 115, 255, 1) 100%
     );
   }
-  .todo-app {
+  /* @media only screen and (min-width: 375px) and (max-width: 812px) { */
+   .ToDo-App {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -25,6 +26,16 @@
     border-radius: 10px;
     padding-bottom: 32px;
   }
+/* } */
+
+.ToDo-App:after {
+   
+
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }
+  
   
   h1 {
     margin: 32px 0;
