--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -18,8 +18,8 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    width: 520px;
-    min-height: 600px;
+    /* width: 520px; */
+    /* min-height: 600px; */
     background: #161a2b;
     text-align: center;
     margin: 128px auto;
